# fri-shift

./: .gitignore  README.md  flake.nix  pyproject.toml
data/: group_assignment.example.csv  member_table.example.csv
src/: main.py
test/: test_main.py
test/data/: test_group_assignment.csv  test_member_table.csv
